@@ -43,6 +43,16 @@ POSSIBILITY OF SUCH DAMAGE.
 
 using namespace libtorrent;
 
+#ifdef TORRENT_DISABLE_DHT
+
+int main(int argc, char* argv[])
+{
+	fprintf(stderr, "not built with DHT support\n");
+	return 1;
+}
+
+#else
+
 void usage()
 {
 	fprintf(stderr,
@@ -261,7 +271,6 @@ int main(int argc, char* argv[])
 			, public_key.size())).c_str());
 
 		wait_for_alert(s, dht_put_alert::alert_type);
-		usleep(10000000);
 	}
 	else if (strcmp(argv[0], "mget") == 0)
 	{
@@ -313,4 +322,6 @@ int main(int argc, char* argv[])
 	fwrite(&state[0], 1, state.size(), f);
 	fclose(f);
 }
+
+#endif
 
